# bwcli-rs

./: .gitignore  Cargo.toml  README.md
crates/bw-cli/: Cargo.toml
crates/bw-cli/src/: context.rs  error.rs  main.rs
crates/bw-cli/src/commands/: config.rs  input.rs  mod.rs  receive.rs  send.rs  status.rs  sync.rs  templates.rs  tools.rs  vault.rs
crates/bw-cli/src/commands/auth/: input.rs  login.rs  mod.rs  prompts.rs  vault_ops.rs
crates/bw-cli/src/output/: formatter.rs  mod.rs
crates/bw-cli/tests/: integration_test.rs
crates/bw-core/: Cargo.toml
crates/bw-core/src/: lib.rs
crates/bw-core/src/models/: mod.rs
crates/bw-core/src/models/api/: auth.rs  error_response.rs  mod.rs  token.rs
crates/bw-core/src/models/auth/: device.rs  login.rs  mod.rs  session.rs  two_factor.rs
crates/bw-core/src/models/send/: mod.rs  send.rs  send_access.rs  send_file.rs  send_request.rs  send_text.rs
crates/bw-core/src/models/state/: auth.rs  environment.rs  kdf.rs  mod.rs  user.rs  vault.rs
crates/bw-core/src/models/vault/: cipher.rs  cipher_request.rs  collection.rs  folder.rs  mod.rs  organization.rs  sync_response.rs  validation_error.rs
crates/bw-core/src/services/: container.rs  crypto.rs  key_service.rs  mod.rs  sdk.rs
crates/bw-core/src/services/api/: client.rs  endpoints.rs  environment.rs  errors.rs  mod.rs  token_manager.rs  traits.rs
crates/bw-core/src/services/auth/: auth_service.rs  errors.rs  mod.rs  session_manager.rs
crates/bw-core/src/services/generator/: errors.rs  mod.rs  passphrase.rs  password.rs  wordlist.rs
crates/bw-core/src/services/import_export/: errors.rs  mod.rs
crates/bw-core/src/services/import_export/export/: mod.rs
crates/bw-core/src/services/import_export/export/formatters/: csv.rs  encrypted_json.rs  json.rs  mod.rs
crates/bw-core/src/services/import_export/import/: mod.rs  validator.rs
crates/bw-core/src/services/import_export/import/parsers/: bitwarden_csv.rs  bitwarden_json.rs  chrome.rs  lastpass.rs  mod.rs  onepassword.rs
crates/bw-core/src/services/send/: errors.rs  mod.rs
crates/bw-core/src/services/storage/: account.rs  atomic.rs  errors.rs  json_storage.rs  keys.rs  mod.rs  path.rs  protected_storage.rs  secure.rs  traits.rs
crates/bw-core/src/services/vault/: cipher_service.rs  confirmation_service.rs  errors.rs  mod.rs  search_service.rs  sync_service.rs  totp_service.rs  validation_service.rs  write_service.rs
crates/bw-core/tests/: auth_service_tests.rs  import_export_tests.rs  sdk_integration_test.rs  storage_tests.rs  storage_tests.rs.bak  vault_write_service_tests.rs
docs/: bw-cli-code-quality-issues.md  bw-core-code-quality-issues.md  sdk-types-clone-status.md
docs/research/: vault-create-edit-analysis.md  vault_decryption_research.md
docs/security/: key_handling_security.md
enhancements/01-project-bootstrap/: 01-project-bootstrap.md
enhancements/01-project-bootstrap/architect/required_output/: implementation_plan.md
enhancements/01-project-bootstrap/documenter/required_output/: documentation_summary.md
enhancements/02-storage-layer/: 02-storage-layer.md
enhancements/03-api-client/: 03-api-client.md
enhancements/04-auth-commands/: 04-auth-commands.md
enhancements/05-vault-read-commands/: 05-vault-read-commands.md
enhancements/06-vault-write-commands/: 06-vault-write-commands.md
enhancements/07-tool-commands/: 07-tool-commands.md
enhancements/08-import-export/: 08-import-export.md
enhancements/09-sdk-integration/: 09-sdk-integration.md
enhancements/10-compatibility-fix/: 10-compatibility-fix.md
enhancements/11-encrypt-decrypt/: 11-encrypt-decrypt.md
enhancements/12-vault-create-edit/: 12-vault-create-edit.md
enhancements/13-sdk-migration-generators/: 13-sdk-migration-generators.md  verification_checklist.md
enhancements/14-sdk-migration-vault/: 14-sdk-migration-vault.md  verification_checklist.md
enhancements/14a-sdk-migration-vault/: 14a-sdk-migration-vault.md  grading_checklist.md
(+115 files in other folders)
