[workspace]
resolver = "2"
members = [
    "crates/bw-cli",
    "crates/bw-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bitwarden Inc."]
license = "GPL-3.0"
rust-version = "1.85.0"

[workspace.dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Bitwarden SDK (path dependencies from ../sdk-internal/)
bitwarden-core = { path = "../sdk-internal/crates/bitwarden-core", version = "=1.0.0" }
bitwarden-crypto = { path = "../sdk-internal/crates/bitwarden-crypto", version = "=1.0.0" }
bitwarden-auth = { path = "../sdk-internal/crates/bitwarden-auth", version = "=1.0.0" }
bitwarden-vault = { path = "../sdk-internal/crates/bitwarden-vault", version = "=1.0.0" }
bitwarden-generators = { path = "../sdk-internal/crates/bitwarden-generators", version = "=1.0.0" }
bitwarden-encoding = { path = "../sdk-internal/crates/bitwarden-encoding", version = "=1.0.0" }
bitwarden-error = { path = "../sdk-internal/crates/bitwarden-error", version = "=1.0.0" }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Security
secrecy = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
sha2 = "0.10"

# Utilities
directories = "5.0"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Interactive prompts
dialoguer = "0.11"
indicatif = "0.17"

# Storage dependencies
tempfile = "3.12"
fs2 = "0.4"

# API and networking
url = "2.5"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV processing
csv = "1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
