[package]
name = "bw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Bitwarden SDK
bitwarden-core = { workspace = true, features = ["internal"] }
bitwarden-crypto.workspace = true
bitwarden-auth.workspace = true
bitwarden-vault.workspace = true
bitwarden-generators.workspace = true
bitwarden-encoding.workspace = true
bitwarden-error.workspace = true

# HTTP and API
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true
directories.workspace = true

# Security
secrecy.workspace = true
zeroize.workspace = true
sha2.workspace = true

# Utilities
base64.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true

# Storage
fs2.workspace = true

# CSV processing
csv.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
wiremock = "0.6"
